# openzim

zimlib/include/: Makefile.am
zimlib/include/zim/writer/: zimdiff.h  zimpatch.h
zimlib/src/: Makefile.am  zimdiff.cpp  zimpatch.cpp
zimlib/src/tools/: Makefile.am  zimDiff.cpp  zimPatch.cpp
